samples/_failures_safe/1761488879_31ebcd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5bb51073.c: In function ‘main’:
./samples/SAFE/__tmp_5bb51073.c:161:5: error: expected expression at end of input
  161 |     int token_count = tokenize(input,
      |     ^~~
./samples/SAFE/__tmp_5bb51073.c:161:23: error: too few arguments to function ‘tokenize’
  161 |     int token_count = tokenize(input,
      |                       ^~~~~~~~
./samples/SAFE/__tmp_5bb51073.c:45:5: note: declared here
   45 | int tokenize(const char *input, Token *tokens, int max_tokens) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_5bb51073.c:161:5: error: expected declaration or statement at end of input
  161 |     int token_count = tokenize(input,
      |     ^~~
